Bug 80614 - [regression] Error in `omxregister-bellagio': munmap_chunk(): invalid pointer: 0x00007f5f76626dab
Summary: [regression] Error in `omxregister-bellagio': munmap_chunk(): invalid pointer...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-27 22:22 UTC by yashax
Modified: 2014-06-28 20:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
installation log (12.06 KB, text/plain)
2014-06-27 22:22 UTC, yashax
Details
gdb output (15.96 KB, text/plain)
2014-06-28 12:23 UTC, yashax
Details

Description yashax 2014-06-27 22:22:58 UTC
Created attachment 101898 [details]
installation log

The latest mesa git (a001ca98e155213ebde343957a934e1b8bb9db3d) introduced error in updating/installing the package 'libomxil-bellagio0' in Ubuntu 13.10 (oibaf PPA).
The previous mesa git snapshot of this PPA was 9a8acafa47558cafeb37f80f4b30061ac1962c69 and it worked ok so the bad commit is one of the following:

http://cgit.freedesktop.org/mesa/mesa/commit/?id=9a9742f92c9ad9d8af7fbddc96a18157f7945d61

http://cgit.freedesktop.org/mesa/mesa/commit/?id=c35cf3400f57c5ed60df4c4a801a71fe897edfb8

http://cgit.freedesktop.org/mesa/mesa/commit/?id=a001ca98e155213ebde343957a934e1b8bb9db3d


installation log attached.
Comment 1 Emil Velikov 2014-06-28 00:24:50 UTC
Commit c35cf3400f5 removed a few calloc's that were required, so I've added them back with a001ca98e15. Yet I do not see how this issue can occur.

Can you attach a backtrace of the issue ? I cannot seem to reproduce this here.
Comment 2 yashax 2014-06-28 06:49:56 UTC
(In reply to comment #1)
> Commit c35cf3400f5 removed a few calloc's that were required, so I've added
> them back with a001ca98e15. Yet I do not see how this issue can occur.
> 
> Can you attach a backtrace of the issue ? I cannot seem to reproduce this
> here.

I did attach the installation log, which contains a backtrace.
Comment 3 Emil Velikov 2014-06-28 10:23:19 UTC
(In reply to comment #2)
> I did attach the installation log, which contains a backtrace.
>
Should have been more explicit - can you run the program in gdb (gdb --args omxregister-bellagio -v) and attach the backtrace (bt full). Make sure that you have the debug symbols for mesa and libomxil-bellagio0.
Comment 4 yashax 2014-06-28 12:23:19 UTC
Created attachment 101914 [details]
gdb output

Ok, gdb output attached.
Comment 5 Emil Velikov 2014-06-28 15:55:24 UTC
Thanks for the report. Seems like I forgot to copy the encoder strings into the new buffers :\ 

commit 15b5e663b050505683b7b4c9c489e46863b8441d
Author: Emil Velikov <emil.l.velikov@gmail.com>
Date:   Sat Jun 28 15:24:43 2014 +0100

    st/omx: strcpy the string into the allocated buffer

    This fixes commit a001ca98e15(st/omx: keep the name,
    (name|role)_specific strings dynamically allocated) in which we
    dynamically allocated the buffers for name and (name|role)_specific
    yet forgot to copy the encoder strings into them.

    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=80614
    Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Comment 6 yashax 2014-06-28 20:07:28 UTC
Thank you for the fix!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.